# backend/docs/swagger.yaml
@@ -202,8 +202,8 @@ paths:
     post:
       tags:
         - auth
-      summary: Signup a native user account
-      description: Signup a native user account
+      summary: Signup
+      description: 無論是第三方還是native的註冊都打這支。第三方無論是登入還註冊都打這支
       requestBody:
         required: true
         content:
@@ -220,6 +220,9 @@ paths:
                 password:
                   type: string
                   example: 'password'
+                provider:
+                  type: string
+                  enum: ['native', 'google']
 
       responses:
         '201':
@@ -234,7 +237,7 @@ paths:
                     example: 'a-jwt-token'
                   user:
                     $ref: '#/components/schemas/UserBase'
-  /auth/login:
+  /auth/nativeSignin:
     post:
       tags:
         - auth
@@ -265,13 +268,13 @@ paths:
                     type: string
                     example: 'a-jwt-token'
                   user:
-                    $ref: '#/components/schemas/UserBase'
+                    $ref: '#/components/schemas/UserLoginBase'
 
   /auth/callback/google:
     get:
       tags:
         - auth
-      summary: Google OAuth callback url
+      summary: Google OAuth callback url (目前不會用到)
       description: Google OAuth callback url
       parameters:
         - in: query
@@ -513,18 +516,15 @@ components:
         id:
           type: integer
           example: 123456
-        name:
-          type: string
-          example: 'user-name'
+    UserLoginBase:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 123456
         email:
           type: string
           example: 'user@gmail.com'
-        provider:
-          type: string
-          enum: ['native', 'google']
-        avatar:
-          type: string
-          example: 'https://path/to/avatar.jpg'
 
     #=============================================================================
     # Ref: GeoJSON
