# backend/src/App/Features/User/SignUp/signUpHandler.ts
@@ -8,7 +8,11 @@ import { tool } from '../../../../utils/tool.js';
 export const signUpHandler = {
   handle: async (body: Signup.TSignUpReq): Promise<Signup.ISignUpResponse> => {
     if (body.provider !== 'native') {
-      const result = await userService.signUp(body);
+      const result = await userService.oauthSignUp(
+        body.email,
+        body.name,
+        body.provider,
+      );
       const tokenInfo = await auth.generateAccessToken(result);
       return await signUpRes.customize(result, tokenInfo);
     }
