# backend/src/Router/authRouter.ts
@@ -5,4 +5,5 @@ const router = express.Router();
 
 // router.get('/callback/google', wrapAsync(authController.googleOauth));
 router.post('/signup', wrapAsync(authController.signUp));
+router.post('/nativeSignin', wrapAsync(authController.signIn));
 export default router;
